# cortex-stt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/cortex_stt/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_setup.py  icons.json  manifest.json  models.py  quality_scale.yaml  sensor.py  stt.py
custom_components/cortex_stt/translations/: en.json
tests/: conftest.py  test_binary_sensor.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_event_sync.py  test_init.py  test_sensor.py  test_stt.py
